# yangzz

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/yangzz/: Cargo.toml
crates/yangzz-core/: Cargo.toml
crates/yangzz-core/src/: attach.rs  codegraph.rs  db.rs  hooks.rs  lib.rs  mcp.rs  memory.rs  message.rs  migrate.rs  pangu.rs  paths.rs  permission.rs  plugin.rs  sandbox.rs  session.rs  skill_detect.rs  task_queue.rs  team.rs
crates/yangzz-core/src/config/: mod.rs  model_meta.rs  presets.rs  settings.rs  writer.rs
crates/yangzz-core/src/provider/: adapter.rs  anthropic.rs  bedrock.rs  mod.rs  openai_compat.rs  router.rs  transport.rs  vertex.rs
crates/yangzz-core/src/query/: mod.rs
crates/yangzz-core/src/render/: mod.rs
crates/yangzz-core/src/skill/: loader.rs  matcher.rs  mod.rs
crates/yangzz-core/src/statusline/: mod.rs  segments.rs
crates/yangzz-core/src/tool/: executor.rs  mod.rs  registry.rs
crates/yangzz-core/src/tool/builtin/: ask_user.rs  bash.rs  browser.rs  code_graph.rs  fetch.rs  file_append.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  list_dir.rs  mod.rs  multi_edit.rs  notebook.rs  parallel_edit.rs  sub_agent.rs  todo.rs  tree.rs  web_search.rs
crates/yangzz-core/tests/: codegraph_smoke.rs
crates/yangzz/src/: cli_mode.rs  guide.rs  main.rs  repl.rs  repl_commands.rs  repl_help.rs  repl_render.rs
crates/yangzz/src/slash/: mod.rs  output.rs  readline_helper.rs  wizard.rs
crates/yangzz/src/slash/commands/: config_cmd.rs  conversation.rs  key.rs  mcp.rs  meta.rs  mod.rs  provider.rs  skill.rs  task.rs  thinking.rs  tool.rs
crates/yangzz/src/tui/: app.rs  mod.rs  renderer.rs  widgets.rs
crates/yangzz/src/ui/: banner.rs  format.rs  i18n.rs  mod.rs  select.rs  status.rs
npm/: README.md  install.js  package.json  platforms.js
npm/scripts/: prepare-platform-packages.js
scripts/: bumpversion.sh
sdk/python/: setup.py
sdk/python/yangzz/: __init__.py
sdk/typescript/: package.json
sdk/typescript/src/: index.ts
