[workspace]
resolver = "2"
members = ["crates/yangzz-core", "crates/yangzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["yangzz contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + TLS
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI (Phase 2)
ratatui = "0.30"
crossterm = "0.29"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Misc
dirs = "6.0"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
termimad = "0.31"
indicatif = "0.17"
dialoguer = "0.11"
rustyline = "15"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
