[package]
name = "yangzz-core"
description = "Core library for yangzz AI coding assistant"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
sha2 = { workspace = true }
hex = { workspace = true }
rusqlite = { workspace = true }

# CodeGraph (Phase 3): tree-sitter AST analysis
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
streaming-iterator = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
